for the learning collage I decided to use a simple grid layout. the grid item are laid out correctly there is just some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -325,11 +325,12 @@ justify-content: center;
     margin-bottom: 20px;
 }
 
-
+ #production-collage {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+ 
+ }
 .bg-periwinkle {
-    position: relative;
-    width: 70.6vw;
-    height: 75vw;
     background-color: #d5b3ff;
 
 } 
